# bis

./: .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  bis.bzl  bis_setup.py  bis_setup.template.py  bisproject_aspect.bzl  extensions.bzl  extract_target_info.bzl  json.template.py  providers.bzl  refresh_compile_commands.bzl  refresh_launch_json.bzl  repositories.bzl  runner.template.py  template_generator.bzl  version.sh
examples/: .bazelrc  MODULE.bazel  WORKSPACE
examples/srcs/apple_binaries/: BUILD
examples/srcs/binary/apple_binaries/: BUILD
examples/srcs/binary/cc_binaries/: BUILD
examples/srcs/binary/ios_application/: BUILD  app.swift
examples/srcs/binary/swift_binaries/: BUILD  entrance.swift
examples/srcs/binary/swift_binary/: BUILD  main.swift
examples/srcs/cc_binaries/: BUILD
examples/srcs/ios/: .gitignore  BUILD  app.swift
examples/srcs/ios/tests/: BUILD  unittest.m  unittest.swift
examples/srcs/ios_application/: app.swift
examples/srcs/macos/: README.md
examples/srcs/macos/CommandLine/: BUILD
examples/srcs/macos/CommandLine/Sources/: main.m
examples/srcs/macos/CommandLineSwift/: BUILD
examples/srcs/macos/CommandLineSwift/Sources/: main.swift
examples/srcs/macos/HelloWorld/: BUILD
examples/srcs/macos/HelloWorld/Sources/: AppDelegate.m  main.m
examples/srcs/module_a/: BUILD  a.m
examples/srcs/module_a/include/: a.h
examples/srcs/module_a/sub_module_b/: sub_b.m
examples/srcs/module_c/: BUILD  module_c.h  module_c_test.cc
examples/srcs/shared/macros/: BUILD.bazel
examples/srcs/shared/module_a/: BUILD
examples/srcs/shared/module_a/sub_module_b/: sub_b.h
examples/srcs/shared/module_b/: BUILD  module_b.swift
examples/srcs/shared/module_c/: BUILD  module_c.cc
examples/srcs/shared/module_d/: BUILD  module_d.h  module_d.m  module_d.swift
examples/srcs/swift_binaries/: BUILD  entrance.swift  main.swift
patches/: file_filter.patch  remove-features-and-skip-syntax-only.patch  subtarget.patch  swift_support.patch
plugin/pymobiledevicelite/: BUILD.bazel  requirements_lock.txt  untils.py
plugin/zxz-moe-bis/: .eslintrc.json  .gitignore  .vscodeignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
plugin/zxz-moe-bis/lldb/: file_monitor.py
plugin/zxz-moe-bis/pymobiledevicelite/: BUILD.bazel  MODULE.bazel  installationProxyService.py  pymobiledevice_version.bzl  pymobiledevicelite.py  pymobiledevicelite.spec  requirements.in  requirements_lock.txt
plugin/zxz-moe-bis/src/: bisProjectSetup.ts  buildTaskProvider.ts  cmds.ts  commonTypes.ts  configuration.ts  cpuProvider.ts  daemonServer.ts  debugConfigProvider.ts  devicePicker.ts  devicectl.ts  error.ts  eventEmitter.ts  extension.ts  inputer.ts  iosDeploy.ts  launchGenerator.ts  libdeps.ts  libpath.ts  loading.ts  logger.ts  picker.ts  platformPicker.ts  pymobiledevice3.ts  refreshCompileCommands.ts  refreshInjectioniiiProject.ts  services.ts  simulatorFocus.ts  simulators.ts  sync.ts  targets.ts  treeProvider.ts  tunneldTreeProvide.ts  utils.ts  variables.ts  workspace.ts
