module(
    name = "bis",
    version = "0.2.4",
)

bazel_dep(name = "rules_swift", version = "1.6.0", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "2.1.0", repo_name = "build_bazel_rules_apple")

deps_ext = use_extension("//:extensions.bzl", "deps_ext")
use_repo(deps_ext, "hedron_compile_commands")
