module(
    name = "bis",
    version = "0.3.2",
)

bazel_dep(name = "rules_swift", version = "1.7.1", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "2.2.0", repo_name = "build_bazel_rules_apple")

deps_ext = use_extension("//:extensions.bzl", "deps_ext")
use_repo(deps_ext, "hedron_compile_commands")
use_repo(deps_ext, "xctestrunner")
