module(
    name = "bis",
    version = "0.4.1",
)

bazel_dep(name = "rules_swift", version = "1.18.0", repo_name = "build_bazel_rules_swift", max_compatibility_level = 2)
bazel_dep(name = "rules_apple", version = "3.11.2", repo_name = "build_bazel_rules_apple")

deps_ext = use_extension("//:extensions.bzl", "deps_ext")
use_repo(deps_ext, "hedron_compile_commands")
use_repo(deps_ext, "xctestrunner")
