module(
    name = "sample",
    version = "0.0.1",
    repo_name = "sample",
)

# rules
bazel_dep(name = "rules_swift", version = "2.8.2", repo_name = "build_bazel_rules_swift")
bazel_dep(name = "rules_apple", version = "3.21.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "apple_support", version = "1.22.0")
bazel_dep(name = "swift-syntax", version = "601.0.1", repo_name = "SwiftSyntax")

# libraries
bazel_dep(name = "swift_argument_parser", version = "1.5.0")

# vscode plugin
bazel_dep(name = "bis", version = "0.0.0", dev_dependency = True)
local_path_override(
    module_name = "bis",
    path = "../",
)


